[package]
name = "json-lines"
version = "0.1.2"
edition = "2021"
authors = ["Andrew Straw <strawman@astraw.com>"]
repository = "https://github.com/strawlab/json-lines"
description = "A no_std + serde compatible message library implementing JSON Lines"
license = "MIT OR Apache-2.0"
categories = ["embedded", "encoding", "no-std"]
keywords = ["serde", "JSON", "framing"]

[package.metadata.docs.rs]
features = ["use-std", "codec"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

serde_json = { version = "1.0", optional = true }
memchr = { version = "2.0", optional = true }
thiserror = { version = "2.0.9", default-features = false, optional = true }
bytes = { version = "1.0", optional = true }
defmt = { version = "0.3", optional = true }
tokio-util = { version = "0.7.1", features = ["codec"], optional = true }

[features]
default = ["use-std"]

use-std = ["thiserror"]
use-defmt = ["defmt"]
codec = ["use-std", "tokio-util", "bytes", "serde_json", "memchr"]
